deployment/k3s-flask-app/k8s/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: packitty-demo
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: packitty-demo
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - name: listener_http
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 10000
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: all_hosts
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: example_upstream
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
      - name: example_upstream
        connect_timeout: 2s
        type: STATIC
        load_assignment:
          cluster_name: example_upstream
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 8080
    admin:
      access_log_path: /tmp/admin.log
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 9901
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-with-envoy
  namespace: packitty-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: packitty
  template:
    metadata:
      labels:
        app: packitty
    spec:
      containers:
      - name: app
        image: packitty/app:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
      - name: envoy
        image: envoyproxy/envoy:v1.35.3
        args: ["-c", "/etc/envoy/envoy.yaml"]
        ports:
        - containerPort: 10000
        - containerPort: 9901
        volumeMounts:
        - name: envoy-config
          mountPath: /etc/envoy
      volumes:
      - name: envoy-config
        configMap:
          name: envoy-config
          items:
          - key: envoy.yaml
            path: envoy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: packitty-svc
  namespace: packitty-demo
spec:
  selector:
    app: packitty
  type: NodePort
  ports:
  - name: http
    port: 10000
    targetPort: 10000
    nodePort: 30080
